[package]
name = "rustrtos"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-performance RTOS for ESP32-S3 based on Embassy and esp-hal 1.0"
authors = ["RustRTOS Team"]

[dependencies]
# ===== ESP-HAL 1.0 核心 =====
esp-hal = { version = "1.0", features = ["esp32s3", "unstable", "psram"] }
esp-rtos = { version = "0.2", features = ["esp32s3", "embassy"] }
esp-alloc = "0.9"
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"], optional = true }
esp-println = { version = "0.16", features = ["esp32s3", "auto"], optional = true }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3"] }

# ===== Embassy 异步运行时 =====
# 注意: esp-rtos 0.2 要求 embassy-executor 0.9
embassy-executor = { version = "0.9" }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }

# ===== 静态分配 =====
static_cell = "2.1"
heapless = "0.8"

# ===== 同步原语 =====
critical-section = "1.2"
portable-atomic = { version = "1.11", default-features = false, features = ["critical-section"] }

# ===== 可选: defmt 日志 =====
defmt = { version = "1.0", features = [], optional = true }
defmt-rtt = { version = "1.0", optional = true }

# ===== 嵌入式基础 =====
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# ===== 文件系统 =====
littlefs2 = "0.4"
embedded-storage = "0.3"

[features]
default = []

# 开发模式 - 启用 esp-println 日志和调试
dev = [
    "esp-backtrace",
    "esp-println",
]

# 仅 defmt 日志 (需要额外配置)
log-defmt = ["defmt", "defmt-rtt", "esp-hal/defmt"]

# 仅 esp-println 日志
log-println = ["esp-println", "esp-backtrace"]

# =============================================
# Profile 配置 - 最激进性能优化
# =============================================

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
incremental = true

# 开发模式下也优化关键依赖
[profile.dev.package.esp-hal]
opt-level = 3

[profile.dev.package.esp-rtos]
opt-level = 3

[profile.dev.package.embassy-executor]
opt-level = 3

[profile.dev.package.embassy-time]
opt-level = 3

[profile.dev.package.critical-section]
opt-level = 3

# =============================================
# Release Profile - 最大性能
# =============================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = "symbols"
incremental = false
rpath = false

# Build script 配置
[package.metadata.espflash]
# 这些选项在使用 espflash 时会自动应用
# 不再需要 --ignore-app-descriptor 因为我们提供了正确的 App Descriptor

# =============================================
# Release-Size Profile - 最小体积
# =============================================
[profile.release-size]
inherits = "release"
opt-level = "z"

# =============================================
# Bench Profile - 性能测试
# =============================================
[profile.bench]
inherits = "release"
debug = true
strip = "none"

[[example]]
name = "blinky"
path = "examples/blinky.rs"

[[example]]
name = "multi_priority"
path = "examples/multi_priority.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "psram_demo"
path = "examples/psram_demo.rs"

[[example]]
name = "memory_pool"
path = "examples/memory_pool.rs"

[[example]]
name = "dma_transfer"
path = "examples/dma_transfer.rs"

[[example]]
name = "dual_core"
path = "examples/dual_core.rs"

[[example]]
name = "filesystem"
path = "examples/filesystem.rs"

[[example]]
name = "benchmark_memory"
path = "examples/benchmark_memory.rs"
