[package]
name = "rustrtos"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-performance RTOS for ESP32-S3 based on Embassy and esp-hal 1.0"
authors = ["RustRTOS Team"]

[dependencies]
# ===== ESP-HAL 1.0 核心 =====
esp-hal = { version = "1.0", features = ["esp32s3", "unstable", "psram"] }
esp-rtos = { version = "0.2", features = ["esp32s3", "embassy", "esp-alloc"] }
esp-alloc = "0.9"
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"], optional = true }
esp-println = { version = "0.16", features = ["esp32s3", "auto"], optional = true }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3"] }

# ===== Embassy 异步运行时 =====
# 注意: esp-rtos 0.2 要求 embassy-executor 0.9
embassy-executor = { version = "0.9" }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }

# ===== 静态分配 =====
static_cell = "2.1"
heapless = "0.8"

# ===== 同步原语 =====
critical-section = "1.2"
portable-atomic = { version = "1.11", default-features = false, features = ["critical-section"] }

# ===== 可选: defmt 日志 =====
defmt = { version = "1.0", features = [], optional = true }
defmt-rtt = { version = "1.0", optional = true }

# ===== 嵌入式基础 =====
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# ===== 文件系统 =====
littlefs2 = "0.4"
embedded-storage = "0.3"

# ===== 网络协议栈 (可选) =====
# WiFi/BLE 驱动 (esp-wifi 已更名为 esp-radio)
esp-radio = { version = "0.17", default-features = false, optional = true, features = [
    "esp32s3",
    "unstable",  # 必需：启用 wifi/ble/coex 等功能
] }

# TCP/IP 网络抽象层 (基于 smoltcp)
embassy-net = { version = "0.7", default-features = false, optional = true, features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "proto-ipv4",
    "medium-ethernet",
] }

# BLE 协议栈 - trouble-host
trouble-host = { version = "0.5", default-features = false, optional = true, features = [
    "peripheral",
    "gatt",
    "default-packet-pool",
    "derive",
] }
bt-hci = { version = "0.2", optional = true }

# smoltcp 底层 (embassy-net 已包含，这里用于直接访问)
smoltcp = { version = "0.12", default-features = false, optional = true, features = [
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-dns",
    "socket-dhcpv4",
    "medium-ethernet",
] }

[features]
default = []

# 开发模式 - 启用 esp-println 日志和调试
dev = [
    "esp-backtrace",
    "esp-println",
]

# 仅 defmt 日志 (需要额外配置)
log-defmt = ["defmt", "defmt-rtt", "esp-hal/defmt"]

# 仅 esp-println 日志
log-println = ["esp-println", "esp-backtrace"]

# ===== 网络功能 Features =====
# WiFi 支持 (STA/AP 模式)
wifi = [
    "esp-radio",
    "esp-radio/wifi",
    "esp-rtos/esp-radio",  # 启用 RTOS 适配器 (esp_rtos_semaphore_* 等)
    "smoltcp",
]

# BLE 支持 - 使用 trouble-host (默认, 纯 Rust 实现)
ble = [
    "esp-radio",
    "esp-radio/ble",
    "esp-rtos/esp-radio",  # 启用 RTOS 适配器
    "trouble-host",
    "bt-hci",
]

# BLE 支持 - 仅使用 esp-radio 内置 BLE
ble-esp = [
    "esp-radio",
    "esp-radio/ble",
    "esp-rtos/esp-radio",  # 启用 RTOS 适配器
]

# WiFi + BLE 共存模式
coex = [
    "wifi",
    "ble",
    "esp-radio/coex",
]

# TCP/IP 网络栈 (需要 WiFi)
network = [
    "wifi",
    "embassy-net",
]

# 完整网络功能 (WiFi + BLE + TCP/IP)
full-network = [
    "network",
    "ble",
]

# =============================================
# Profile 配置 - 最激进性能优化
# =============================================

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
incremental = true

# 开发模式下也优化关键依赖
[profile.dev.package.esp-hal]
opt-level = 3

[profile.dev.package.esp-rtos]
opt-level = 3

[profile.dev.package.embassy-executor]
opt-level = 3

[profile.dev.package.embassy-time]
opt-level = 3

[profile.dev.package.critical-section]
opt-level = 3

# =============================================
# Release Profile - 最大性能
# =============================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = "symbols"
incremental = false
rpath = false

# Build script 配置
[package.metadata.espflash]
# 这些选项在使用 espflash 时会自动应用
# 不再需要 --ignore-app-descriptor 因为我们提供了正确的 App Descriptor

# =============================================
# Release-Size Profile - 最小体积
# =============================================
[profile.release-size]
inherits = "release"
opt-level = "z"

# =============================================
# Bench Profile - 性能测试
# =============================================
[profile.bench]
inherits = "release"
debug = true
strip = "none"

[[example]]
name = "blinky"
path = "examples/blinky.rs"

[[example]]
name = "multi_priority"
path = "examples/multi_priority.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "psram_demo"
path = "examples/psram_demo.rs"

[[example]]
name = "memory_pool"
path = "examples/memory_pool.rs"

[[example]]
name = "dma_transfer"
path = "examples/dma_transfer.rs"

[[example]]
name = "dual_core"
path = "examples/dual_core.rs"

[[example]]
name = "filesystem"
path = "examples/filesystem.rs"

[[example]]
name = "benchmark_memory"
path = "examples/benchmark_memory.rs"
[[example]]
name = "wifi_scan"
path = "examples/wifi_scan.rs"
required-features = ["wifi", "dev"]

[[example]]
name = "wifi_connect"
path = "examples/wifi_connect.rs"
required-features = ["network", "dev"]

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"
required-features = ["network", "dev"]

[[example]]
name = "ble_advertise"
path = "examples/ble_advertise.rs"
required-features = ["ble", "dev"]

[[example]]
name = "ble_gatt_server"
path = "examples/ble_gatt_server.rs"
required-features = ["ble", "dev"]

[[example]]
name = "benchmark_network"
path = "examples/benchmark_network.rs"
required-features = ["network", "dev"]